PROJECT(XD)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# 设置工程根目录
SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}/../")
# 设置可执行文件目录
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/bin/")
# 设置静态库目录
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/lib/")
# 设置编译条件
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O0 -std=c++11 -g")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -std=c++11 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O0 -std=c++11 -g")
ADD_DEFINITIONS(-D_GNU_SOURCE)

# 添加库目录
ADD_SUBDIRECTORY(src)
# 添加测试目录
ADD_SUBDIRECTORY(test)
